# marine-rlcd

./: .gitignore  README.md  convert_png_to_rgb565.py  fix_ota_boot.py  partitions.csv  partitions_16mb.csv  platformio.ini
boards/: waveshare_esp32_s3_rlcd_4_2.json
include/: calibration_types.h  lv_conf.h  screen_config_c_api.h
lib/ESP32_Display_Panel/: library.json
lib/ESP32_Display_Panel/src/board/supported/waveshare/: BOARD_WAVESHARE_ESP32_S3_TOUCH_LCD_2_1.h
lib/ESP32_Display_Panel/src/drivers/bus/port/: esp_lcd_panel_io_3wire_spi.c  esp_lcd_panel_io_additions.h
lib/ESP32_Display_Panel/src/drivers/lcd/: esp_panel_lcd.cpp
lib/ESP32_IO_Expander/src/port/: esp_io_expander_tca9554.c  esp_io_expander_tca9554.cpp
scripts/: fix_async.py  fix_async2.py  make_default_c.py
src/: BAT_Driver.h  CMakeLists.txt  Display_RLCD.cpp  Display_RLCD.h  Display_ST7701.cpp  Display_ST7701.h  ESP32-S3_Square_Display.code-workspace  Gyro_QMI8658.cpp  I2C_Driver.cpp  I2C_Driver.h  LVGL_Driver.cpp  LVGL_Driver.h  LVGL_Example.cpp  RTC_PCF85063.cpp  RTC_PCF85063.h  SD_Card.cpp  SD_Card.h  TCA9554PWR.cpp  TCA9554PWR.h  Touch_GT911.cpp  Touch_GT911.h  Wireless.cpp  Wireless.h  ais_display.cpp  ais_display.h  compass_display.cpp  compass_display.h  config_storage.cpp  display_bsp.cpp  display_bsp.h  dual_number_display.cpp  dual_number_display.h  filelist.txt  gauge_config.cpp  gauge_config.h  gauge_number_display.cpp  gauge_number_display.h  graph_display.cpp  graph_display.h  handle_toggle_test_mode.cpp  (+57 more)
tools/: convert_assets_to_rgb565_bin.py
(+1 files in other folders)
